# STLIB

./: .gitignore  CMakeLists.txt  README.md  stlib.pyscn
.github/workflows/: ci.yml  nightly-build.yml
MATLAB/: UDP_controller.m
MATLAB/simulink/: UDP_server.slx
cmake/: environment.cmake
docs/: makedoc.pyscn
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_autosummary/: stlib.physics.html  stlib.scene.html  stlib.solver.html  stlib.tools.html  stlib.visuals.html
docs/html/_autosummary/_autosummary/: stlib.physics.deformable.html  stlib.physics.rigid.html
docs/html/_modules/: index.html
docs/html/_modules/stlib/physics/: rigid.html
docs/html/_sources/_autosummary/: stlib.scene.rst.txt  stlib.solver.rst.txt  stlib.tools.rst.txt  stlib.visuals.rst.txt
docs/sphinx/: .readthedocs.yml  Makefile  requirements.readthedocs.yml
docs/sphinx/source/: conf.py  index.rst  stlib.rst
docs/sphinx/source/_autosummary/: stlib.physics.rst
docs/sphinx/source/_autosummary/_autosummary/: stlib.physics.deformable.rst  stlib.physics.rigid.rst
docs/stlib/: index.html
docs/stlib/physics/: index.html
docs/stlib/physics/deformable/: elasticmaterialobject.m.html  elasticobject.m.html  index.html
docs/stlib/physics/rigid/: index.html  rigidobject.m.html
docs/stlib/scene/: defaultheader.m.html  index.html  stlibheader.m.html
docs/stlib/solver/: defaultsolver.m.html  index.html
docs/stlib/tools/: index.html
docs/stlib/tools/animation/: animate.m.html  index.html
docs/stlib/visuals/: index.html
python/splib/: __init__.py  utils.py
python/splib/algorithms/: __init__.py
python/splib/animation/: animate.py  easing.py
python/splib/caching/: cacher.py
python/splib/constants/: Key.py  KeyCode.py
python/splib/debug/: __init__.py
python/splib/geometric/: __init__.py  gmesh.py  gmsh.py
python/splib/geometric/data/meshes/: parametric_mesh_example.step
python/splib/loaders/: __init__.py
python/splib/numerics/: __init__.py  quat.py  quat_test.py  vec3.py  vec3_test.py
python/splib/objectmodel/: __init__.py
python/splib/scenegraph/: __init__.py
python/stlib/: __init__.py  tools.py
python/stlib/algorithms/: __init__.py
python/stlib/animation/: __init__.py  animate.py
python/stlib/communication/: UDP_controller.py
python/stlib/components/: __init__.py  topology.py
python/stlib/debug/: __init__.py
python/stlib/loader/: __init__.py
python/stlib/loader/mesh/: __init__.py
python/stlib/loader/mesh/parametricmeshloader/: __init__.py  parametricmeshloader.py
python/stlib/numerics/: __init__.py  quat.py  quat_test.py  vec3.py  vec3_test.py
python/stlib/physics/: __init__.py
python/stlib/physics/collision/: __init__.py  collision.py
python/stlib/physics/constraints/: __init__.py  fixedbox.py  subTopology.py
python/stlib/physics/deformable/: __init__.py  elasticmaterialobject.py  elasticobject.py  highOrderShape.py
python/stlib/physics/deformablerigid/: __init__.py  elastorigidobject.py
python/stlib/physics/mixedmaterial/: __init__.py  rigidification.py
python/stlib/physics/rigid/: __init__.py  rigidobject.py
python/stlib/scene/: __init__.py  contactheader.py  defaultheader.py  interaction.py  mainheader.py  stlibheader.py  wrapper.py
python/stlib/solver/: __init__.py  defaultsolver.py
python/stlib/tools/: __init__.py
python/stlib/tools/animation/: __init__.py  animate.py
python/stlib/units/: __init__.py
python/stlib/visuals/: __init__.py
python/test/: TestExampleScenes.py
python3/src/splib3/: __init__.py
python3/src/splib3/animation/: __init__.py  animate.py
python3/src/splib3/debug/: __init__.py
python3/src/splib3/geometric/: __init__.py  gmesh.py
python3/src/splib3/interface/: __init__.py  serialport.py
python3/src/splib3/loaders/: __init__.py  xmlloader.py
python3/src/splib3/numerics/: __init__.py  quat.py  quat_test.py  vec3.py
python3/src/splib3/objectmodel/: __init__.py
python3/src/splib3/scenegraph/: __init__.py
python3/src/splib3/topology/: Remeshing_functions.py  Remeshing_functions_test.py  __init__.py  remeshing.py
python3/src/stlib/physics/constraints/: __init__.py
python3/src/stlib/types/: __init__.py
python3/src/stlib3/: __init__.py
python3/src/stlib3/communication/: UDP_controller.py
python3/src/stlib3/loader/: __init__.py
python3/src/stlib3/numerics/: __init__.py
python3/src/stlib3/physics/: __init__.py
python3/src/stlib3/physics/collision/: __init__.py  collision.py
python3/src/stlib3/physics/constraints/: __init__.py  fixedbox.py  fixedbox_prefab.py  partiallyfixedbox.py  subTopology.py
python3/src/stlib3/physics/deformable/: __init__.py  elasticmaterialobject.py
python3/src/stlib3/physics/mixedmaterial/: __init__.py  rigidification.py
python3/src/stlib3/physics/rigid/: RigidObject.py  __init__.py
python3/src/stlib3/scene/: Scene.py  __init__.py  contactheader.py  interaction.py  mainheader.py  scene.py  wrapper.py
python3/src/stlib3/solver/: __init__.py  defaultsolver.py
python3/src/stlib3/tools/: __init__.py
python3/src/stlib3/units/: __init__.py
python3/src/stlib3/visuals/: VisualModel.py  __init__.py  visualmodel.py
python3/stlib/: __init__.py
python3/stlib/physics/: __init__.py
python3/stlib/physics/constraints/: fixedbox_prefab.py
python3/stlib/physics/deformable/: elasticmaterialobject.py
python3/test/: TestExampleScenes.py
simulink/: UDP_server.slx
src/: initPlugin.cpp  initPlugin.h
src/cpp/stlib/: initPlugin.cpp
src/python3/src/stlib/components/: __init__.py
src/python3/src/stlib/loader/: Loader.py  __init__.py
src/python3/src/stlib/scene/: __init__.py  mainheader.py  scene.py  wrapper.py
src/python3/src/stlib3/: __init__.py
src/python3/stlib/scene/: contactheader.py  interaction.py
src/python3/stlib/solver/: __init__.py
src/python3/stlib/visuals/: __init__.py  visualmodel.py
src/python3/stlib3/components/: __init__.py
src/python3/stlib3/solver/: __init__.py
src/python3/test/: TestExampleScenes.py
tests/: CMakeLists.txt  STLIB_test.cpp
(+32 files in other folders)
